# PROVES_LIBRARY

./: .env.example  .gitignore  .markdownlint.json  .mcp.json  CANON.md  CLAUDE.md  Dockerfile  FOLDER_STRUCTURE.md  GETTING_STARTED.md  LICENSE  README.md  SETUP_GUIDE.md  _config.yml  apply_all_migrations_to_supabase.md  create_migration_016.ps1  docker-compose.yml  fix_function.sql  refresh-memory.ps1  requirements-local.txt  requirements.txt  setup.py  test_notion_teamspace.py  tmpclaude-ae8a-cwd  verify_setup.ps1
curator-agent/: .gitignore  NOTION_SETUP_GUIDE.md  QUICK_START_MONITORING.md  README.md  README_MONITORING.md  SCRIPTS_GUIDE.md  check_environment.py  daily_extraction.py  extraction_progress.json  generate_curator_report.py  langgraph.json  log_error_to_notion.py  pyproject.toml  reset_progress.py  run_proveskit_incremental.py  run_with_approval.py  test_full_extraction.py  test_simple_extraction.py
curator-agent/archive/: README.md
curator-agent/archive/error-logging-setup/: add_error_properties.py  check_errors_database.py  create_errors_database.py  inspect_errors_database.py  inspect_extractions_database.py  inspect_suggestion_page.py  inspect_suggestions_database.py  recreate_errors_database.py  test_create_error_page.py  test_error_logging.py  (+2 more)
mcp-server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  source_registry.yaml
mcp-server/docs/: MCP_SERVER_REQUIREMENTS.md
production/: README.md  pyproject.toml
production/Version 2/: agent_v2.py  extractor.py  process_extractions.py  process_extractions_v2.py  storage.py  validator.py
production/Version 3/: agent_v3.py  crawl_orchestrator.py  database.py  extractor_v3.py  process_extractions_v3.py  schema_validator.py  storage_v3.py  subagent_specs_v3.py  team_loaders.py  test_output.txt  test_pooling_fix.py  validator_v3.py
production/core/: __init__.py  db_connector.py  deep_extraction_agent.py  demo_identifiers.py  demo_with_real_data.py  identifiers.py
production/curator/: analyze_accepted_batch.py  batch_promote_accepted.py  batch_promotion_results.json  error_logger.py  subagent_specs.py
production/docs/: DEPLOYMENT_NOTES.md  NOTION_INTEGRATION_GUIDE.md
production/schemas/: extraction_schema.json
production/scripts/: check_pending_extractions.py  find_good_urls.py  improvement_analyzer.py
production/worker/: extraction_worker.py
(+230 files in other folders)
