[project]
name = "proves-mcp-server"
version = "0.1.0"
description = "MCP server for querying the PROVES Library knowledge graph"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Elizabeth Osborn", email = "eosborn@cpp.edu"}
]

dependencies = [
    "fastmcp>=0.1.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.2.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
proves-mcp = "proves_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proves_mcp"]
